<resources>
    <string name="app_name">Translator 06</string>
    <string name="something_broke">Something broke</string>
    <string name="reload">Reload</string>
    <string name="words_fab_content_description">Enter new word for search</string>
    <string name="search_clear_text">Clear text</string>
    <string name="search_input_hint">word for search</string>
    <string name="search_text">Search</string>
    <string name="timer_start_button">Start</string>
    <string name="timer_pause_button">Pause</string>
    <string name="timer_stop_button">Stop</string>
    <string name="history_text">Choice from history</string>
</resources>